[IndexedDB] Delete callbacks state on worker thread exit.

During refactoring of r430110 the logic to actually delete the internal
state of IndexedDBCallbacksImpl and IndexedDBDatabaseCallbacksImpl
objects that lives on worker threads was accidentally removed.

BUG=667465

Review-Url: https://codereview.chromium.org/2525443002
Cr-Commit-Position: refs/heads/master@{#433707}

Former-commit-id: ff03e42e8773445a9ee1649dbcbb5b4aae7c2567